# wsidata

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  README.md  Untitled.ipynb  bio-format-reader.ipynb  pyproject.toml  read_bioformats_java.ipynb
.github/workflows/: build.yaml
assets/: logo.ai
doc/source/: conf.py  index.rst  installation.rst
doc/source/api/: index.rst
doc/source/intro/: index.rst
docs/: clean_up.py
docs/source/: conf.py  index.rst  installation.rst
docs/source/_static/: custom.css
docs/source/_templates/: wsidata.rst
docs/source/api/: accessors.rst  datasets.rst  index.rst  io.rst  readers.rst
docs/source/intro/: .gitignore  01-read&write.ipynb  02-accessors.ipynb  03-tiles.ipynb  index.rst
tests/: conftest.py  test_accessors.py  test_agg_wsi.py  test_concat_feature_anndata.py  test_read_wsi.py  test_readers.py  test_tile.py  test_wsidata.py
tests/data/CMU-1-Small-Region.zarr/: zmetadata
tests/data/CMU-1-Small-Region.zarr/images/wsi_thumbnail/: .zattrs
tests/data/CMU-1-Small-Region.zarr/images/wsi_thumbnail/0/: .zarray
tests/data/CMU-1-Small-Region.zarr/images/wsi_thumbnail/0/0/0/: 0
tests/data/CMU-1-Small-Region.zarr/shapes/tiles/: shapes.parquet
tests/data/CMU-1-Small-Region.zarr/shapes/tissues/: shapes.parquet
tests/data/CMU-1-Small-Region.zarr/tables/resnet50_tiles/: .zattrs
tests/data/CMU-1-Small-Region.zarr/tables/resnet50_tiles/X/: .zarray
tests/data/CMU-1-Small-Region.zarr/tables/resnet50_tiles/X/0/: 0
tests/data/CMU-1-Small-Region.zarr/tables/resnet50_tiles/obs/: .zattrs
tests/data/CMU-1-Small-Region.zarr/tables/resnet50_tiles/obs/_index/: 0
tests/data/CMU-1-Small-Region.zarr/tables/resnet50_tiles/obs/library_id/categories/: 0
tests/data/CMU-1-Small-Region.zarr/tables/resnet50_tiles/obs/library_id/codes/: .zarray  0
tests/data/CMU-1-Small-Region.zarr/tables/resnet50_tiles/obs/tile_id/: .zarray  0
tests/data/CMU-1-Small-Region.zarr/tables/resnet50_tiles/uns/spatialdata_attrs/instance_key/: 0
tests/data/CMU-1-Small-Region.zarr/tables/resnet50_tiles/uns/spatialdata_attrs/region/: 0
tests/data/CMU-1-Small-Region.zarr/tables/resnet50_tiles/var/_index/: .zarray  0
tests/data/CMU-1-Small-Region.zarr/tables/slide_properties/uns/bounds/: 0
tests/data/CMU-1-Small-Region.zarr/tables/slide_properties/uns/level_downsample/: .zarray
tests/data/CMU-1-Small-Region.zarr/tables/slide_properties/uns/level_shape/: .zarray
tests/data/CMU-1-Small-Region.zarr/tables/slide_properties/uns/magnification/: 0
tests/data/CMU-1-Small-Region.zarr/tables/slide_properties/uns/raw/: .zarray  0
tests/data/CMU-1-Small-Region.zarr/tables/slide_properties/uns/shape/: 0
tests/data/CMU-1-Small-Region.zarr/tables/tile_spec/uns/tiles/mpp/: 0
tests/data/CMU-1-Small-Region.zarr/tables/tile_spec/uns/tiles/tissue_name/: 0
wsidata/: __init__.py  _logging.py  _normalizer.py  _sample.py  _utils.py
wsidata/_accessors/: __init__.py  dataset.py  get.py  iter.py  register.py
wsidata/_io/: __init__.py  _store.py  download.py  wsi.py
wsidata/_model/: __init__.py  core.py  data.py  tile.py  tilespec.py
wsidata/_reader/: base.py  bioformat.py  cucim.py  utils.py
wsidata/accessors/: __init__.py  dataset.py  fetch.py  iter.py  register.py
wsidata/dataset/: __init__.py  disk.py  feature.py  graph.py  image.py
wsidata/dataset/multislides/: __init__.py  builder.py  dataset.py  sampler.py
wsidata/io/: __init__.py  _download.py  _elems.py  _wsi.py
wsidata/reader/: __init__.py  _reader_datatree.py  _reader_datatree_zarr_v3.py  _reader_registry.py  base.py  bioformats.py  cucim.py  fastslide.py  isyntax.py  openslide.py  pylibczi.py  spatialdata_image2d.py  tiffslide.py  utils.py
