[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wsidata"
authors = []
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.10"
dynamic = ["version", "description"]

dependencies = [
    "spatialdata>=0.3.0",
    "opencv-python-headless",
    "openslide-python",
    "openslide-bin",
    "tiffslide",
    "rich",
    "numba>=0.61.0",
    "torch>=2.6.0",
]

[project.optional-dependencies]
stain = ["torchstain"]
bioformats = ["scyjava"]
cucim = ["cucim"]
plot = ["matplotlib", "legendkit"]

[tool.hatch.version]
path = "wsidata/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = [
    "docs",
    "data",
    "assets",
    "tests",
    "scripts",
    ".readthedocs.yaml",
    ".github",
    ".gitignore",
]
include = [
    "README.md",
    "LICENSE",
    "pyproject.toml",
    "wsidata",
]

[tool.ruff]
lint.ignore = ["F401"]
line-length = 88

[tool.taskipy.tasks]
hello = "echo Hello, World!"
test = "pytest tests"
doc-build = "sphinx-build -b html docs/source docs/build"
doc-serve = "python -m http.server -d docs/build/html"
fmt = "ruff format docs/source wsidata tests"

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
    "jupyterlab>=4.3.5",
    "myst-nb>=1.1.2",
    "numpydoc>=1.8.0",
    "pre-commit>=4.1.0",
    "pydata-sphinx-theme>=0.16.1",
    "pytest>=8.3.4",
    "ruff>=0.9.4",
    "sphinx>=8.1.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "taskipy>=1.14.1",
    "pytest-cov>=6.0.0",
    "torchvision>=0.21.0",
    "torchstain>=1.4.1",
    "matplotlib>=3.10.0",
    "legendkit>=0.3.4",
]
