[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "wsidata"
description = "Efficient data structures and IO for whole slide image analysis"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Yimin Zheng", email = "yzheng@cemm.at"},
    {name = "Ernesto Abila", email = "eabila@cemm.at"},
    {name = "André F. Rendeiro", email = "arendeiro@cemm.at"},
]
keywords = ["histopathology", "whole slide image", "image analysis", "data structure"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: File Formats",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
Documentation = "https://wsidata.readthedocs.io"
repository = "https://github.com/rendeirolab/wsidata"
dynamic = ["version"]
dependencies = [
    "spatialdata>=0.3.0",
    "opencv-python-headless",
    "openslide-python>=1.4.1",
    "openslide-bin>=4.0.0.2",
    "tiffslide",
    "rich",
    "torch>=2.0.0",
]

[project.optional-dependencies]
stain = ["torchstain"]
bioformats = ["scyjava"]
cucim = ["cucim"]
plot = ["matplotlib", "legendkit"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.hooks.version]
path = "wsidata/_version.py"
template = '''
version = "{version}"
'''

[tool.hatch.build.targets.sdist]
exclude = [
    "docs",
    "data",
    "assets",
    "tests",
    "scripts",
    ".readthedocs.yaml",
    ".github",
    ".gitignore",
]
include = [
    "README.md",
    "LICENSE",
    "pyproject.toml",
    "wsidata",
]

[tool.hatch.build.targets.wheel]
packages = ["wsidata", "README.md", "LICENSE", "pyproject.toml"]

[tool.ruff]
lint.ignore = ["F401"]
lint.extend-select = ["I"]
line-length = 88

[tool.taskipy.tasks]
hello = "echo Hello, World!"
test = "pytest tests"
doc-build = "sphinx-build -b html -j auto docs/source docs/build"
doc-clean-build = "python docs/clean_up.py && sphinx-build -b html -j auto docs/source docs/build"
doc-serve = "python -m http.server 12900 -d docs/build"
fmt = "ruff format docs/source wsidata tests"

[tool.uv]
default-groups = ["dev", "docs", "readers"]

[dependency-groups]
dev = [
    "jupyterlab>=4.3.5",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "ruff>=0.9.4",
    "taskipy>=1.14.1",
    "pytest-cov>=6.0.0",
    "torchvision>=0.21.0",
    "torchstain>=1.4.1",
    "matplotlib>=3.10.0",
    "legendkit>=0.3.4",
    "pyright>=1.1.393",
    "pooch>=1.8.2",
    "jupyter-cache>=1.0.1",
    "notebook>=7.3.3",
    "pandas-stubs>=2.3.0.250703",
]
docs = [
    "sphinx>=8.1.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "myst-nb>=1.1.2",
    "numpydoc>=1.8.0",
    "pydata-sphinx-theme>=0.16.1",
    "sphinx>=8.1.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "sphinxext-opengraph[social-cards]>=0.10.0",
]
readers = [
    "cucim-cu12>=25.6.0; sys_platform == 'linux'",
    "scyjava>=1.10.1",
]
datasets = [
    "torch-geometric>=2.6.1",
]
